Sat Mar 19 18:32:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* numeric.c (int_to_f): raise NotImplementedError when a receiver
	  class is unknown.

	* test/-ext-/integer/test_my_integer.rb (test_my_integer_to_f): modify
	  a test for the above change.

Sat Mar 19 18:21:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* bignum.c (Bignum#<=>): remove it because they are unified with
	  Integer#<=>.

	* numeric.c (Integer#<=>, Fixnum#<=>): move <=> method from Fixnum to
	  Integer.

	* numeric.c (int_cmp): add this method for Integer#<=>.

	* test/-ext-/integer/test_my_integer.rb (test_my_integer_cmp): add a
	  test to examine Integer#<=> for unknown subclasses.

Sat Mar 19 14:46:18 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* iseq.c (rb_iseq_compile_with_option): make the parser in mild
	  error.

	* load.c (rb_load_internal0): ditto.

	* parse.y (yycompile0): return the error message within the error
	  to be raised.  [Feature #11951]

	* parse.y (parser_compile_error): accumulate error messages in the
	  error_buffer.

Sat Mar 19 03:57:13 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* time.c (LOCALTIME): organize #ifdefs.

	* time.c (GMTIME): define only ifndef HAVE_STRUCT_TM_TM_GMTOFF.

Sat Mar 19 03:53:31 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in (rb_cv_member_struct_tm_tm_gmtoff): For Linux (glibc)
	  define _BSD_SOURCE for time.h to define struct tm.tm_gmtoff.

	* time.c: define _BSD_SOURCE at the top.

Sat Mar 19 03:00:50 2016  Rei Odaira  <Rei.Odaira@gmail.com>

	* test/-ext-/time/test_new.rb (test_timespec_new): change a gmtoff
	  test to a better one that does not depend on whether the current
	  time is in summer time or not.

Fri Mar 19 00:00:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* bignum.c (rb_big_to_f, Bignum#to_f): removed them because they are
	  unified with int_to_f and Integer#to_f.

	* numeric.c (int_to_f): treat Bignum values directly.

Fri Mar 18 23:41:00 2016  Kenta Murata  <mrkn@mrkn.jp>
