@@ -1,3 +1,8 @@
+Sat Mar 19 21:53:35 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* numeric.c (fix_cmp): invert the result as the comarison is
+	  inverted.
+
 Sat Mar 19 18:32:00 2016  Kenta Murata  <mrkn@mrkn.jp>
 
 	* numeric.c (int_to_f): raise NotImplementedError when a receiver
